<resources>
    <string name="app_name">ExamenFin</string>
    <string name="buscar">Buscar</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="editorial">Editorial</string>
    <string name="marca_la_opcion_que_necesites">marca la opcion que necesites:</string>
    <string name="mi_base_de_datos_de_libros">Mi Base de Datos de Libros</string>
    <string name="libro_nuevo">Libro Nuevo</string>
    <string name="listado_libros">Listado Libros</string>
    <string name="buscar_libros">Buscar Libros</string>
    <string name="salir">Salir</string>
    <string name="el_tiempo">El Tiempo</string>
    <string name="vitoria">Vitoria</string>
    <string name="bilbo">Bilbo</string>
    <string name="donostia">Donostia</string>
    <string name="volver">volver</string>
    <string name="leidos">Leidos</string>
    <string name="no_leidos">No Leidos</string>
    <string name="todos_los_libros">Todos los Libros</string>
    <string name="ejer2">Ejer2</string>
    <string name="ejer1">Ejer1</string>
    <string name="titulo1">titulo</string>
    <string name="datos_nuevo_libro">DATOS NUEVO LIBRO</string>
    <string name="autor1">Autor</string>
    <string name="isbn">ISBN</string>
    <string name="editorial">Editorial</string>
    <string name="num_paginas">NUM PAGINAS</string>
    <string name="leido">Leido</string>
    <string name="insertar">Insertar</string>
    <string name="cancelar">Cancelar</string>
    <string name="salir1">Salir</string>
    <string name="eliminar">Eliminar</string>
    <string name="salir2">salir</string>
    <string name="volver1">volver</string>
    <string name="listado_de_libros">Listado de Libros</string>
    <string name="salir4">Salir</string>
</resources>