<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejer1">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50sp"
        android:text="@string/mi_base_de_datos_de_libros"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnNuevo"/>

    <Button
        android:id="@+id/btnNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libro_nuevo"
        android:layout_margin="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />

    <Button
        android:id="@+id/btnListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listado_libros"
        android:layout_margin="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevo" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_margin="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar_libros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListar" />

    <Button
        android:id="@+id/btnSalirBD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:layout_margin="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnBuscar" />


</androidx.constraintlayout.widget.ConstraintLayout>